# unraid-api

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  UNRAIDAPI.md  context7.json  coverage.json  pyproject.toml  requirements.txt  test_api_curl.sh  unraid_api_client.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/instructions/: aikido_rules.instructions.md
.github/workflows/: ci.yml  publish.yml  security.yml  workflow.yml
.serena/: .gitignore  project.yml
scripts/: test_api.sh  test_live.py  test_ssl_detection.py  unraid-api-client.py  validate-schema.py
src/unraid_api/: __init__.py  _version.py  capabilities.py  client.py  const.py  exceptions.py  models.py
tests/: conftest.py  test_capabilities.py  test_client.py  test_client_async.py  test_exceptions.py  test_models.py  test_subscriptions.py
